--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<h1>micro_Twitter</h1>
+<p>Welcome to the rails micro twitter app</p>
+<br>
+<br>
+<ul>
+  <% @posts.each do |post| %>
+    <li>
+      <h4><%= post.title%></h4>
+    </li>
+  <%end%>
+</ul>
