add show action

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,8 @@
 <ul>
   <% @posts.each do |post| %>
     <li>
-      <h4><%= post.title%></h4>
+      <!-- <a href="<%= post_path(post)%>"><%=post.title%></a> -->
+      <h4><%= link_to post.title, post %></h4>
     </li>
   <%end%>
 </ul>
