--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,6 @@
 <h3><%= @post.title %></h3>
 <p><%= @post.body %></p>
+<% if current_user.id == @post.user_id %>
+  <%= link_to "edit post", edit_post_path(@post) %>
+  <%= link_to "delete post", post_path(@post), data:{turbo_method: :delete, turbo_confirm:"Are you sure?"} %>
+<%end%>
